--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ian Graham | Junior Software Developer</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
     <script
       src="https://kit.fontawesome.com/3e14ba6b53.js"
       crossorigin="anonymous"
     ></script>
     <script src="script.js" defer></script>
   </head>
+
   <body id="home">
     <header class="hero">
       <nav class="navbar">
@@ -37,50 +40,21 @@
       </section>
     </header>
 
-    <main>
-      <article id="about">
-        <div class="about-title">
-          <h2>About Me</h2>
-        </div>
-        <section class="about-content">
-          <section class="about-profile-pic">
-            <figure>
-              <img
-                src="./img/IMG_7734.jpg"
-                width="640"
-                height="631"
-                alt="Ian Graham"
-              />
-              <figcaption class="offscreen">Ian Graham</figcaption>
-            </figure>
-          </section>
-          <section class="about-profile-content">
-            <p>
-              Hello, my name is Ian. I'm a Junior Software Developer from
-              Rossendale, Lancashire in the UK. I currently have experience in
-              both front-end and back-end Web technologies and am always
-              actively learning new things.
-            </p>
-            <p>
-              Recently, I completed the 13-week long Software Engineering
-              bootcamp at Northcoders which taught me so many skills in such a
-              short amount of time.
-            </p>
-            <p>
-              I am now looking for the opportunity to further increase my
-              knowledge and experience, and am ready to apply myself and begin a
-              career as a Junior Developer.
-            </p>
-          </section>
-        </section>
-      </article>
-    </main>
+    <main class="main-content"></main>
+
     <footer id="footer">
       <div class="footer-text">
-        <p>Ian Graham &copy; 2024, All Rights Reserved</p>
+        <p>Ian Graham &copy; 2024</p>
       </div>
-      <div class="icons">
-        <i class="fa-brands fa-linkedin-in"></i>
+      <div class="footer-icons">
+        <a
+          href="https://www.linkedin.com/in/ian-graham-357649223/"
+          target="_blank"
+          ><i class="fa-brands fa-linkedin-in"></i
+        ></a>
+        <a href="https://github.com/Iagrah99">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </div>
     </footer>
   </body>
