starts skills section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,36 @@
       </section>
     </header>
 
-    <main class="main-content"></main>
+    <main class="main-content">
+      <section id="about" class="skills bg-light">
+        <div class="flex-items">
+          <figure>
+            <i class="fa-brands fa-html5"></i>
+            <figcaption>HTML5</figcaption>
+          </figure>
+          <figure>
+            <i class="fa-brands fa-css3-alt"></i>
+            <figcaption>CSS</figcaption>
+          </figure>
+          <figure>
+            <i class="fa-brands fa-js"></i>
+            <figcaption>JavaScript</figcaption>
+          </figure>
+          <figure>
+            <i class="fa-brands fa-react"></i>
+            <figcaption>React</figcaption>
+          </figure>
+          <figure>
+            <i class="fa-brands fa-node"></i>
+            <figcaption>Node JS</figcaption>
+          </figure>
+          <figure>
+            <i class="fa-solid fa-database"></i>
+            <figcaption>SQL</figcaption>
+          </figure>
+        </div>
+      </section>
+    </main>
 
     <footer id="footer">
       <div class="footer-text">
@@ -52,7 +81,7 @@
           target="_blank"
           ><i class="fa-brands fa-linkedin-in"></i
         ></a>
-        <a href="https://github.com/Iagrah99">
+        <a href="https://github.com/Iagrah99" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
