adds skills section

--- a/index.html
+++ b/index.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ian Graham | Junior Software Developer</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
-    <script
-      src="https://kit.fontawesome.com/3e14ba6b53.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js" defer></script>
-  </head>
 
-  <body id="home">
-    <header class="hero">
-      <nav class="navbar">
-        <div class="logo">
-          <a href="#home">IG</a>
-        </div>
-        <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-        <div class="navbar-links">
-          <ul>
-            <li><a href="#about"> About </a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <section class="hero-content">
-        <h1 class="hero-title">Hi, I'm Ian Graham</h1>
-        <h2 class="hero-subtitle">Junior Software Developer</h2>
-        <a class="btn" href="#about">About Me</a>
-      </section>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ian Graham | Junior Software Developer</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
+  <script src="https://kit.fontawesome.com/3e14ba6b53.js" crossorigin="anonymous"></script>
+  <script src="script.js" defer></script>
+</head>
 
-    <main class="main-content">
-      <section id="about" class="skills bg-light">
-        <div class="flex-items">
-          <figure>
-            <i class="fa-brands fa-html5"></i>
-            <figcaption>HTML5</figcaption>
-          </figure>
-          <figure>
-            <i class="fa-brands fa-css3-alt"></i>
-            <figcaption>CSS</figcaption>
-          </figure>
-          <figure>
-            <i class="fa-brands fa-js"></i>
-            <figcaption>JavaScript</figcaption>
-          </figure>
-          <figure>
-            <i class="fa-brands fa-react"></i>
-            <figcaption>React</figcaption>
-          </figure>
-          <figure>
-            <i class="fa-brands fa-node"></i>
-            <figcaption>Node JS</figcaption>
-          </figure>
-          <figure>
-            <i class="fa-solid fa-database"></i>
-            <figcaption>SQL</figcaption>
-          </figure>
-        </div>
-      </section>
-    </main>
-
-    <footer id="footer">
-      <div class="footer-text">
-        <p>Ian Graham &copy; 2024</p>
+<body id="home">
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">
+        <a href="#home">IG</a>
       </div>
-      <div class="footer-icons">
-        <a
-          href="https://www.linkedin.com/in/ian-graham-357649223/"
-          target="_blank"
-          ><i class="fa-brands fa-linkedin-in"></i
-        ></a>
-        <a href="https://github.com/Iagrah99" target="_blank">
-          <i class="fa-brands fa-github"></i>
-        </a>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#about"> About </a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
-    </footer>
-  </body>
+    </nav>
+    <section class="hero-content">
+      <h1 class="hero-title">Hi, I'm Ian Graham</h1>
+      <h2 class="hero-subtitle">Junior Software Developer</h2>
+      <a class="btn" href="#about">About Me</a>
+    </section>
+  </header>
+
+  <main class="main-content">
+    <section id="about" class="skills bg-light">
+      <div class="skills-title-container">
+        <h2 class="skills-title">My Skills</h2>
+      </div>
+      <div class="skill-icons">
+        <figure>
+          <i class="fa-brands fa-html5 fa-10x"></i>
+          <figcaption>HTML5</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-brands fa-css3-alt fa-10x"></i>
+          <figcaption>CSS</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-brands fa-js fa-10x"></i>
+          <figcaption>JavaScript</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-brands fa-react fa-10x"></i>
+          <figcaption>React</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-brands fa-node fa-10x"></i>
+          <figcaption>Node JS</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-solid fa-database fa-10x"></i>
+          <figcaption>SQL</figcaption>
+        </figure>
+        <figure>
+          <i class="fa-brands fa-git-alt fa-10x"></i>
+          <figcaption>Git</figcaption>
+        </figure>
+      </div>
+    </section>
+  </main>
+
+  <footer id="footer">
+    <div class="footer-text">
+      <p>Ian Graham &copy; 2024</p>
+    </div>
+    <div class="footer-icons">
+      <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank"><i
+          class="fa-brands fa-linkedin-in"></i></a>
+      <a href="https://github.com/Iagrah99" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+    </div>
+  </footer>
+</body>
+
 </html>
