adds more features to current sections

--- a/index.html
+++ b/index.html
@@ -16,75 +16,104 @@
   <header class="hero">
     <nav class="navbar">
       <div class="logo">
-        <a href="#home">IG</a>
+        <img src="./img/icons/mode.png" width="256" height="256" alt="Colour Theme Toggle">
       </div>
+
       <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </a>
+
       <div class="navbar-links">
         <ul>
           <li><a href="#about"> About </a></li>
+
           <li><a href="#projects">Projects</a></li>
+
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
+
     <section class="hero-content">
       <h1 class="hero-title">Hi, I'm Ian Graham</h1>
+
       <h2 class="hero-subtitle">Junior Software Developer</h2>
+
       <a class="btn" href="#about">About Me</a>
     </section>
   </header>
 
   <main class="main-content">
     <section id="about" class="skills bg-light">
-      <div class="skills-title-container">
-        <h2 class="skills-title">My Skills</h2>
-      </div>
-      <div class="skill-icons">
-        <figure>
-          <i class="fa-brands fa-html5 fa-10x"></i>
-          <figcaption>HTML5</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-brands fa-css3-alt fa-10x"></i>
-          <figcaption>CSS</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-brands fa-js fa-10x"></i>
-          <figcaption>JavaScript</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-brands fa-react fa-10x"></i>
-          <figcaption>React</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-brands fa-node fa-10x"></i>
-          <figcaption>Node JS</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-solid fa-database fa-10x"></i>
-          <figcaption>SQL</figcaption>
-        </figure>
-        <figure>
-          <i class="fa-brands fa-git-alt fa-10x"></i>
-          <figcaption>Git</figcaption>
-        </figure>
+      <div class="wrapper">
+        <div class="skills-title-container">
+          <h2 class="skills-title">My Skills</h2>
+        </div>
+
+        <div class="skill-icons">
+          <figure>
+            <i class="fa-brands fa-html5 fa-10x" title="HTML5"></i>
+            <figcaption>HTML5</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-brands fa-css3-alt fa-10x" title="CSS"></i>
+            <figcaption>CSS</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-brands fa-js fa-10x" title="JavaScript"></i>
+            <figcaption>JavaScript</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-brands fa-react fa-10x" title="React"></i>
+            <figcaption>React</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-brands fa-node fa-10x" title="Node JS"></i>
+            <figcaption>Node JS</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-solid fa-database fa-10x" title="SQL"></i>
+            <figcaption>SQL</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-brands fa-git-alt fa-10x" title="Git"></i>
+            <figcaption>Git</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-solid fa-mobile-screen-button fa-10x" title="Responsive Design"></i>
+            <figcaption>Responsive Design</figcaption>
+          </figure>
+
+          <figure>
+            <i class="fa-solid fa-universal-access fa-10x" title="Accessibility"></i>
+            <figcaption>Accessibility</figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </main>
 
   <footer id="footer">
-    <div class="footer-text">
-      <p>Ian Graham &copy; 2024</p>
-    </div>
-    <div class="footer-icons">
-      <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank"><i
-          class="fa-brands fa-linkedin-in"></i></a>
+    <a href="#home">
+      <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
+    </a>
+    <p class="footer-text">Ian Graham &copy; 2024</p>
+
+    <div class="footer-social-icons">
+      <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank">
+        <i class="fa-brands fa-linkedin-in fa-2x"></i>
+      </a>
       <a href="https://github.com/Iagrah99" target="_blank">
-        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-github fa-2x"></i>
       </a>
     </div>
   </footer>
