starts projects section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,55 @@
                 ></i>
                 <figcaption>Accessibility</figcaption>
               </figure>
+              <!-- <figure>
+                <i class="fa-brands fa-square-js fa-10x" title="Express JS"></i>
+                <figcaption>Express JS</figcaption>
+              </figure>
+              <figure>
+                <i class="fa-solid fa-bug-slash fa-10x" title="Debugging"></i>
+                <figcaption>Debugging</figcaption>
+              </figure> -->
+            </div>
+          </div>
+        </section>
+      </article>
+
+      <article id="projects">
+        <section class="projects-showcase">
+          <div class="wrapper">
+            <div class="projects-showcase-title-container">
+              <h2 class="projects-showcase-title">Projects Showcase</h2>
+            </div>
+
+            <div class="nc-news">
+              <figure class="nc-news-figure">
+                <a href="https://nc-news-uk.netlify.app/" target="_blank">
+                  <img
+                    class="nc-news-img"
+                    src="./img/nc-news-screenshot-1.jpg"
+                    alt="NC News Project Homepage Screenshot"
+                    width="1649"
+                    height="1232"
+                  />
+                </a>
+                <figcaption class="offscreen">NC News Project</figcaption>
+              </figure>
+              <div class="project-paragraphs">
+                <h3>NC News App</h3>
+                <p>
+                  A News App which allows the user to perform actions such as
+                  browsing different articles, filtering them by different
+                  attributes articles by topic, sort them by date, comment
+                  count, or votes. They can order in ascending or descending
+                  order. Clicking on an article leads to its full view. Users
+                  can upvote/downvote, post/delete comments (if they are the
+                  author), and sign in as predefined users.
+                </p>
+                <p>
+                  Technologies used: <br />
+                  JavaScript, React.js, React Bootstrap, HTML5, CSS3, Git.
+                </p>
+              </div>
             </div>
           </div>
         </section>
